sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value j
		j = i-1;
                ^AlgInsertionSort:7: error: not found: value j
		while(getValeur(j)>v){
                                ^AlgInsertionSort:8: error: not found: value j
			if(j>0){
                           ^AlgInsertionSort:9: error: not found: value j
				j -= 1
                                ^AlgInsertionSort:12: error: not found: value j
		for(k<-j until i){
                       ^